sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {

	var apresBleu = 0
	var blancRouge = getTaille()-1
	var avantBlanc = getTaille()-1

	while (apresbleu < avantBlanc) {
		getCouleur(apresBleu) match {
			case BLEU  => apresbleu +=1
			case BLANC => echange(apresBleu, avantBlanc) ; avantBlanc -= 1
			case _     => echange(apresBleu, blancRouge) ; avantBlanc -= 1 ; blancRouge -= 1
		}
	}

}
